objects/IAM_User_Password_Rest__c.object
<CustomObject>
    <fields>
        <fullName>IAM_Contact_Status__c</fullName>
        <label>Contact Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Contact_id__c</fullName>
        <label>Contact id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Service_Provider_code__c</fullName>
        <label>Service Provider Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password_Reset_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Password Reset Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>User Password Rest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Password_Reset_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Password_Reset_Complete</fullName>
        <columns>NAME</columns>
        <columns>Password_Reset_Complete__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Password_Reset_Complete__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Password Reset Complete</label>
    </listViews>
    <listViews>
        <fullName>SErvice_Provider_Code</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IAM_Service_Provider_code__c</field>
            <operation>equals</operation>
            <value>37542</value>
        </filters>
        <label>SErvice Provider Code</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>USer password rest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Password Rest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>